--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,64 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# Created by https://www.gitignore.io
 
-# Folder config file
-Desktop.ini
+.vagrant
+.idea
+adreset2.db
+db/
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+### Python ###
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# C extensions
+*.so
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Windows shortcuts
-*.lnk
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-# =========================
-# Operating System Files
-# =========================
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# OSX
-# =========================
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*,cover
 
-.DS_Store
-.AppleDouble
-.LSOverride
+# Translations
+*.mo
+*.pot
 
-# Thumbnails
-._*
+# Django stuff:
+*.log
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
+# Sphinx documentation
+docs/_build/
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# PyBuilder
+target/
