--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pylint==1.5.5
 pytest==2.9.1
 pytest-cov==2.2.1
 python-editor==0.5
+python-ldap==2.4.25
 requests==2.9.1
 six==1.10.0
 SQLAlchemy==1.0.12
