Use the Flask ENV config option to determine the type of environment

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,8 @@ usedevelop = true
 deps = -r{toxinidir}/test-requirements.txt
 commands =
     pytest -vv {posargs}
+setenv =
+    FLASK_ENV=development
 
 [testenv:flake8]
 skip_install = true
