--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ Flask-SQLAlchemy
 flask-jwt-extended>=3.12.0
 # Waiting on https://github.com/cannatag/ldap3/pull/576
 ldap3==2.5
+passlib
 python-json-logger
 six
