--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ matrix:
       env: TOXENV=py27
     - python: 3.6
       env: TOXENV=py36
+    - python: 3.7
+      # https://github.com/travis-ci/travis-ci/issues/9069#issuecomment-425720905
+      sudo: required
+      dist: xenial
+      env: TOXENV=py37
     - env: TOXENV=flake8
 install:
   - pip install tox
