--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Python
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -101,8 +102,33 @@ ENV/
 # mypy
 .mypy_cache/
 
+
+### JavaScript
+# Dependencies
+/frontend/node_modules
+/frontend/.pnp
+.pnp.js
+
+# Testing
+/frontend/coverage
+
+# Production
+/frontend/build
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+
+### Custom
+adreset.db
+
 # IDE
 .vscode/
-
-# Custom
-adreset.db
