--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.4.0",
+    "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
+    "jwt-decode": "^2.2.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "react-toastify": "^4.4.3",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,13 +24,14 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "parser": "babel-eslint",
     "env": {
       "browser": true,
       "jest": true
     },
     "extends": "airbnb",
     "rules": {
-      "react/prefer-stateless-function": "off"
+      "react/destructuring-assignment": "off"
     }
   },
   "browserslist": [
@@ -31,8 +41,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/reactstrap": "^6.4.2",
     "eslint-config-airbnb": "^17.1.0"
   }
 }
