Stop enforcing the ESLint rule of forbid-prop-types

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     },
     "extends": "airbnb",
     "rules": {
-      "react/destructuring-assignment": "off"
+      "react/destructuring-assignment": "off",
+      "react/forbid-prop-types": "off"
     }
   },
   "browserslist": [
