Fix the JavaScript formatting with "Prettier"

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "extends": "airbnb",
     "rules": {
       "react/destructuring-assignment": "off",
-      "react/forbid-prop-types": "off"
+      "react/forbid-prop-types": "off",
+      "arrow-parens": "off"
     }
   },
   "browserslist": [
