--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
