--- a/api/tox.ini
+++ b/api/tox.ini
@@ -3,7 +3,9 @@ envlist = flake8, py27, py36, py37
 skip_missing_interpreters = true
 
 [flake8]
+ignore = D100,D104,W503
 max-line-length = 100
+exclude = .git,.tox,adreset/migrations
 
 [testenv]
 usedevelop = true
