Format the code with black

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,13 @@ matrix:
     script:
     - cd api && tox
 
+    - language: python
+    env: TOXENV=black
+    install:
+    - pip install tox
+    script:
+    - cd api && tox
+
   - language: node_js
     node_js:
     - '8'
