--- a/api/tox.ini
+++ b/api/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, py27, py36, py37
+envlist = black, flake8, py27, py36, py37
 skip_missing_interpreters = true
 
 [flake8]
@@ -14,6 +14,14 @@ commands =
     pytest -vv {posargs}
 setenv =
     FLASK_ENV=development
+
+[testenv:black]
+description = black
+skip_install = true
+deps =
+    black==19.10b0
+commands =
+    black --check --diff adreset tests
 
 [testenv:flake8]
 skip_install = true
